Add Accordion components to sbom.yml

--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,24 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+import * as React from 'react';
+import * as AccordionPrimitive from '@radix-ui/react-accordion';
+import { ChevronDown } from 'lucide-react';
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="https://public-frontend-cos.metadl.com/mgx/img/favicon.png" type="image/png">
-  <title>Zubin Qayam | Corporate BD & Marketing Professional</title>
-  <meta name="description" content="Corporate business development and marketing professional focused on Oman's industrial healthcare ecosystem" />
-  <meta name="author" content="Zubin Qayam" />
+import { cn } from '@/lib/utils';
 
-  <meta property="og:title" content="Zubin Qayam | Corporate BD & Marketing Professional" />
-  <meta property="og:description" content="Corporate business development and marketing professional focused on Oman's industrial healthcare ecosystem" />
-  <meta property="og:type" content="website" />
+const Accordion = AccordionPrimitive.Root;
 
-  <script type="module" crossorigin src="/assets/index-CVx3cGMX.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/index-CrW1aAFj.css">
-</head>
+const AccordionItem = React.forwardRef<
+  React.ElementRef<typeof AccordionPrimitive.Item>,
+  React.ComponentPropsWithoutRef<typeof AccordionPrimitive.Item>
+>(({ className, ...props }, ref) => <AccordionPrimitive.Item ref={ref} className={cn('border-b', className)} {...props} />);
+AccordionItem.displayName = 'AccordionItem';
 
-<body>
-  <div id="root"></div>
-</body>
+const AccordionTrigger = React.forwardRef<
+  React.ElementRef<typeof AccordionPrimitive.Trigger>,
+  React.ComponentPropsWithoutRef<typeof AccordionPrimitive.Trigger>
+>(({ className, children, ...props }, ref) => (
+  <AccordionPrimitive.Header className="flex">
+    <AccordionPrimitive.Trigger
+      ref={ref}
+      className={cn(
+        'flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180',
+        className
+      )}
+      {...props}
+    >
+      {children}
+      <ChevronDown className="h-4 w-4 shrink-0 transition-transform duration-200" />
+    </AccordionPrimitive.Trigger>
+  </AccordionPrimitive.Header>
+));
+AccordionTrigger.displayName = AccordionPrimitive.Trigger.displayName;
 
-</html>
+const AccordionContent = React.forwardRef<
+  React.ElementRef<typeof AccordionPrimitive.Content>,
+  React.ComponentPropsWithoutRef<typeof AccordionPrimitive.Content>
+>(({ className, children, ...props }, ref) => (
+  <AccordionPrimitive.Content
+    ref={ref}
+    className="overflow-hidden text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
+    {...props}
+  >
+    <div className={cn('pb-4 pt-0', className)}>{children}</div>
+  </AccordionPrimitive.Content>
+));
+
+AccordionContent.displayName = AccordionPrimitive.Content.displayName;
+
+export { Accordion, AccordionItem, AccordionTrigger, AccordionContent };
