--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
-# Dependency directories
-node_modules/
-
-# Build outputs
-dist/
-build/
-
-# Security scan results
-results.sarif
-*.sarif
-
-# Temporary files
-.DS_Store
+# Logs
+logs
 *.log
-*.tmp
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
